# PyMessage

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sandbox.py  sitemap.xml  walkthrough.ipynb
.github/workflows/: ci.yml
API/: index.html
assets/readme/: index.html
code-examples/: index.html
docs/: API.md  code-examples.md  index.md  iphone-backup.md
docs/assets/: readme.md
docs_pypkgs/: Makefile  conf.py  example.ipynb  make.bat
search/: search_index.json
src/pymessage/: __init__.py  add_numbers.py  analytics.py  attachments.py  backups.py  contacts.py  conversations.py  db.py  macos.py  messages.py  schema.py  template_package.py  utils.py
src/pymessage/data/: generate_example_backup.py
src/pymessage/data/example_backup/: Info.plist  Manifest.plist
src/pypackage_template/: __init__.py
tests/: conftest.py  test_analytics.py  test_attachments.py  test_backups.py  test_contacts.py  test_conversations.py  test_db.py  test_macos.py  test_messages.py  test_schema.py  test_template_package.py  test_utils.py
