[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project]
name = "pypackage_template"
version = "0.0.1"
description = "A small example package managed with uv"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "polars==1.37.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[project.scripts]
my-uv-cli = "my_uv_package.cli:main"

[tool.uv]
# Here you can put uv-specific configuration if needed later
# (you can leave this section out entirely for the simplest case)
