[build-system]
requires = ["uv_build >= 0.9.21, <0.10.0"]
build-backend = "uv_build"

[project]
name = "pymessage"
version = "0.1.0"
description = "Read iMessage data from iPhone backup SQLite databases and return clean pandas DataFrames"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pandas>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.setuptools.package-data]
pymessage = ["data/**/*"]

[tool.uv]
# Here you can put uv-specific configuration if needed later
# (you can leave this section out entirely for the simplest case)
